--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-gcm-push-notification",
+  "name": "gandalf-react-native-gcm-push-notification",
   "version": "1.0.1",
   "description": "React Native component for Google Cloud Messaging for IOS and Android",
   "scripts": {
@@ -7,7 +7,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/evollu/react-native-gcm-push-notification.git"
+    "url": "git+https://github.com/rbnquintero/react-native-gcm-push-notification.git"
   },
   "keywords": [
     "React-Native",
@@ -15,10 +15,10 @@
     "android",
     "gcm"
   ],
-  "author": "Libin Lu",
+  "author": "Ruben",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/evollu/react-native-gcm-push-notification/issues"
+    "url": "https://github.com/rbnquintero/react-native-gcm-push-notification"
   },
-  "homepage": "https://github.com/evollu/react-native-gcm-push-notification#readme"
+  "homepage": "https://github.com/rbnquintero/react-native-gcm-push-notification"
 }
